@@ -1,3 +1,7 @@
+* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.3
+- Use Simplib::Umask data type in lieu of validate_umask(),
+  a deprecated simplib Puppet 3 function.
+
 * Fri Aug 24 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.2.2
 - Add support for Puppet 5 and OEL
 - Update badges in README.md
